Fixed overflow

--- a/src/style/InfoWindow.module.css
+++ b/src/style/InfoWindow.module.css
@@ -7,6 +7,7 @@
     border: solid 1px #282d32;
     border-radius: 4px;
     max-width: 1400px;
+    overflow: auto;
 }
 
 @media only screen and (max-width: 1000px) {
